--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+@keyframes imganim_in {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.5);
+    }
+}
+@keyframes imganim_out {
+    0% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+@keyframes alertanim {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 body {
     font-family: Helvetica, Arial;
     margin: 0;
@@ -32,16 +59,74 @@ body {
     text-align: center;
     border-radius: 1px;
 }
+/* .admin_panel {
+    position: absolute;
+    width: 31%;
+    padding: 2%;
+    top: 21%;
+    left: 33%;
+    float: left;
+    background-color: rgba(173, 216, 230, .9);
+    text-align: center;
+    border-radius: 8px;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, .2);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+} */
+.admin_panel h1 {
+    color: red
+}
+#contact_form, .admin_panel {
+    position: absolute;
+    width: 31%;
+    padding: 2%;
+    top: 21%;
+    left: 33%;
+    float: left;
+    background-color: rgba(173, 216, 230, .9);
+    text-align: center;
+    border-radius: 8px;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, .2);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+}
+#alert_form {
+    position: absolute;
+    width: 31%;
+    padding: 2%;
+    top: 21%;
+    left: 33%;
+    float: left;
+    background-color: rgba(173, 216, 230, .9);
+    text-align: center;
+    border-radius: 8px;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, .2);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+    animation: alertanim 2s ease-in-out;
+}
+#alert_form p, .admin_panel p {
+    color: darksalmon;
+    text-shadow: 2px 2px 4px rgba(233, 150, 122, .2);
+}
+#contact_form textarea, #contact_form input, .admin_panel input {
+    font-family: Verdana;
+    max-width: 30vw;
+    border-radius: 4px;
+    border: none;
+    resize: none;
+    border-bottom: 2px solid lightcoral;
+}
 #card p#name {
     font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, .2);
     margin: 0;
 }
 #card p#title {
     font-size: 30px;
     color: darksalmon;
+    text-shadow: 2px 2px 4px rgba(233, 150, 122, .4);
+    box-shadow: 0 4px 3px rgba(0, 0, 0, .1);
     margin: 5%;
 }
-#card button {
+#card button, #contact_form button, .admin_panel button {
     /* overflow: none; */
     text-decoration: none;
     border: none;
@@ -49,7 +134,7 @@ body {
     font-size: 20px;
     cursor: pointer;
     color: lightseagreen;
-    text-shadow: 0.2px 0.2px lightseagreen;
+    text-shadow: 2px 2px 4px rgba(32, 178, 170, .25);
     border-bottom: 2px solid lightcoral;
 }
 #card button:hover {
@@ -60,7 +145,12 @@ body {
     height: 310px;
     margin-inline: auto;
     display: block;
-    border-radius: 5px;
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    animation: imganim_out 1s forwards;
+}
+#card img:hover {
+    animation: imganim_in 1s forwards;
 }
 .banner, .footer {
     text-align: center;
@@ -81,6 +171,10 @@ body {
     display: inline-block;
     text-decoration: none;
     margin: 0 20px;
+}
+#navbar ul li a[id=admin] {
+    color: #ff0000;
+    text-shadow: 1px 1px 4px rgba(255, 0, 0, .2);
 }
 #navbar ul li:hover {
     text-shadow: 0.2px 0.2px lightseagreen;
